r50 - may, 15, 2009
    * /config/schema.yml : Cotisation got a new field 'montant'
    * symfony propel:build-model
    * /doc/piwam-install.sql : updated
    * symfony propel:build-forms
    * Membre : actions > processForm() > fixed error due to wrong variable
      ($user instad of $membre)
    * Membre : actions > executeEndregistration() > we do not try to retrieve
      user's data anymore (these data weren't used)
    * view.yml : prototype.js enabled to avoid JS warning
    * layout.php : jQuery's noConflict mode enabled
    * Cotisation : _form > AJAX behaviour to update the amount according to
      the type of Cotisation
    * => Issue #5 has been done


r49 - may, 14, 2009
    * /doc/piwam-install.sql : DECIMAL amounts are now in 10,2 format
    * Association : new action 'crendentials' to deal with credentials
    * Association : new template 'credentialsError.php'
    * Membre : actions > executeShow > fixed bug #15. checks that you have the
      right to watch the user profile
    * Depense : actions > executeShow > fixed bug #15. checks that you have the
      right to watch the information
    * Recette : actions > executeShow > fixed bug #17. checks that you have the
      right to watch the information
    * Compte : actions > executeShow > fixed bug #17. checks that you have the
      right to watch the information
    * CotisationType : actions > executeShow > fixed bug #16. checks that you
      have the right to watch the information
    * Statut : actions > executeShow > fixed bug #16. checks that you have the
      right to watch the information
    * Cotisation : actions > executeShow > checks that you have the right to 
      watch the information
    

r48 - may, 14, 2009
    * CotisationTypeForm.class.php : Fixed bug #11. Integer can't be negative
    * Association : bilanSuccess.php > fixed bug #8. Tfoot has been removed to
      ensure respect of XHTML
    * DepenseForm.class.php : fixed bug #4. Amount can't be negative